AM_CPPFLAGS = -I$(srcdir)/../include
lib_LTLIBRARIES = libsceinterface.la
libsceinterface_la_LDFLAGS = -version-info @SCE_INTERFACE_LTVERSION@
libsceinterface_la_SOURCES = SCELight.c \
                             SCEMesh.c \
                             SCERenderState.c \
                             SCEQuad.c \
                             SCEGeometryInstance.c \
                             SCEBatch.c \
                             SCESceneResource.c \
                             SCEMaterial.c \
                             SCETexture.c \
                             SCEShaders.c \
                             SCESceneEntity.c \
                             SCESkybox.c \
                             SCESprite.c \
                             SCEModel.c \
                             SCEDeferred.c \
                             SCEScene.c \
                             SCEInterface.c
