sce_include_interface_HEADERS = SCEBatch.h \
                                SCEGeometryInstance.h \
                                SCELight.h \
                                SCEMaterial.h \
                                SCETexture.h \
                                SCEShaders.h \
                                SCEMesh.h \
                                SCEQuad.h \
                                SCESceneEntity.h \
                                SCEScene.h \
                                SCESceneResource.h \
                                SCESkybox.h \
                                SCEModel.h \
                                SCEInterface.h
