sce_include_interface_HEADERS = SCEBatch.h \
                                SCEGeometryInstance.h \
                                SCELight.h \
                                SCERenderState.h \
                                SCEMaterial.h \
                                SCETexture.h \
                                SCEShaders.h \
                                SCEMesh.h \
                                SCEQuad.h \
                                SCESceneEntity.h \
                                SCEVoxelTerrain.h \
                                SCEDeferred.h \
                                SCEScene.h \
                                SCESceneResource.h \
                                SCESkybox.h \
                                SCESprite.h \
                                SCEModel.h \
                                SCEInterface.h
